src/internal/vm/snapshots/hebi__internal__vm__tests__closure_call.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
fn outer():
  v := "yo"
  fn inner():
    return v
  return inner

outer()()


# Result:
Object(
    "yo",
)
