src/internal/vm/snapshots/hebi__internal__vm__tests__for_iter_iterable_class.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
class Counter:
  n = 0
  max = 0

  init(self, max):
    self.max = max

  fn iter(self):
    return self

  fn next(self):
    if self.n < self.max:
      n := self.n
      self.n += 1
      return n

  fn done(self):
    return self.n >= self.max

for v in Counter(10):
  print v


# Result:
None

# Output:
0
1
2
3
4
5
6
7
8
9

