src/internal/vm/snapshots/hebi__internal__vm__tests__init_simple_class_derived.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
class T: pass
class U(T): pass
U()


# Result:
Object(
    ClassInstance {
        name: "U",
        fields: {},
        parent: Some(
            ClassType {
                name: "T",
                init: None,
                fields: {},
                methods: {},
                parent: None,
            },
        ),
    },
)
