src/internal/vm/snapshots/hebi__internal__vm__tests__init_simple_data_class_derived.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
class T: pass
class U(T):
  v = 0
U()


# Result:
Object(
    ClassInstance {
        name: "U",
        fields: {
            "v": Int(
                0,
            ),
        },
        parent: Some(
            ClassType {
                name: "T",
                init: None,
                fields: {},
                methods: {},
                parent: None,
            },
        ),
    },
)
